@@ -12,7 +12,7 @@ system if not done properly!
 
 
 Requirements:
-	python, pacman, makepkg (found in pacman) fakeroot and versionpkg. 
+	python, pacman 3.1.0 or later, makepkg (found in pacman) and fakeroot
 
 Installation:
 	cd misc/
