@@ -10,6 +10,7 @@ AURBUILD
 	  been built by aurbuild
 	* Got rid of annoying pkgname.pid dirs in /var/tmp/aurbuild/build
 	* Remove makepkgv2 support
+	* Remove all uses of versionpkg. (makepkg has assimilated its function)
 
  -v1.8.1 (February 29, 2008)
 	* Fixed a lot of stuff in README and the man page
